--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : google4352c07a4170807f
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
