--- a/_config.yml
+++ b/_config.yml
@@ -264,7 +264,7 @@ defaults:
       type: posts
     values:
       layout: single
-      # classes: wide
+      classes: wide
       author_profile: true
       read_time: false
       comments: true
@@ -277,5 +277,5 @@ defaults:
       type: pages
     values:
       layout: single
-      # classes: wide
+      classes: wide
       author_profile: true
