Try to change author bio

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,9 @@ analytics:
 author:
   name             : "Rui Sun"
   avatar           : "profile.jpg"
-  bio              : "Ph.D. student in Biomedical Engineering at Carnegie Mellon University"
+  bio              : "Ph.D. student
+  Biomedical Engineering
+  Carnegie Mellon University"
   location         : # "Pittsburgh"
   email            :
   uri              :
