Try to change author bio

--- a/_config.yml
+++ b/_config.yml
@@ -102,8 +102,8 @@ analytics:
 author:
   name             : "Rui Sun"
   avatar           : "profile.jpg"
-  bio              : "Ph.D. student
-  Biomedical Engineering
+  bio              : "Ph.D. student \n
+  Biomedical Engineering \n
   Carnegie Mellon University"
   location         : # "Pittsburgh"
   email            :
