--- a/_config.yml
+++ b/_config.yml
@@ -266,10 +266,10 @@ defaults:
       layout: single
       classes: wide
       author_profile: true
-      read_time: false
+      read_time: true
       comments: true
       share: # true
-      related: true
+      related: false
 
   # _pages
   - scope:
